fixed words in p overlapping

--- a/index.css
+++ b/index.css
@@ -183,7 +183,7 @@ button:hover {
 .easycom-container2-item p {
     margin-bottom: 30px;
     font-size: 1.5rem;
-    line-height: 1.2px;
+    line-height: 1.1em;
     color: hsl(233, 26%, 24%);
 
 }
@@ -382,10 +382,10 @@ footer {
     }
 }
 
-@media(max-width:1244px) {
+@media(max-width:1001px) {
     .easycom-container2-wrapper {
-        flex-direction: row;
-        flex-wrap: wrap;
+        flex-direction: column;
+        flex-wrap: nowrap;
     }
 }
 
@@ -556,3 +556,4 @@ footer {
     }
 
 }
+
